--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,18 +7,35 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+# Dependencies
+node_modules/
+node_modules/*
+
+# Production build files
+build/
+dist/
 dist-ssr
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Editor-specific files
+.vscode/
+.idea/
+*.sublime-workspace
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS-specific files
+.DS_Store
+.AppleDouble
+.LSOverride
