--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.455.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
