Setup CRUD Operations

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://thehiteshwarkaushik:0HuvluiHS6lBmKj1@cluster0.nc5xf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://sainirohan830:7WtMeDHpL92FEX1P@cluster0.eaxm1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
